--- a/core/profiles/demo_umami/themes/umami/css/base.css
+++ b/core/profiles/demo_umami/themes/umami/css/base.css
@@ -265,7 +265,7 @@ p {
 /* Additional CSS*/
 
 .layout-bottom {
-    background: #00a6e2;
+    background: #00a6e2!important;
     color: #FFF;
 
 }
