--- a/core/profiles/demo_umami/themes/umami/css/base.css
+++ b/core/profiles/demo_umami/themes/umami/css/base.css
@@ -272,3 +272,24 @@ p {
 .layout-bottom p, .layout-bottom a{
   font-size: 14pt;
 }
+.path-frontpage main.main.container {
+    display: none;
+}
+.col-md-4 {
+    width: calc(94%/4);
+    display: inline-block;
+    float: left;
+    margin-left: 1%;
+    margin-right: 1%;
+}
+.card-wrap {
+    background: #FFF;
+    padding: 40px;
+    margin: 40px 0px;
+}
+.card-title {
+    margin: 20px 0;
+    text-align: center;
+    font-size: 20pt;
+    font-weight: bold;
+}
