--- a/core/profiles/demo_umami/themes/umami/css/base.css
+++ b/core/profiles/demo_umami/themes/umami/css/base.css
@@ -265,9 +265,11 @@ p {
 /* Additional CSS*/
 
 .layout-bottom {
-    background: #00a6e2!important;
+    background: #89bd15!important;
     color: #FFF;
-
+}
+footer.footer {
+    background: #00a6e2!important;
 }
 .layout-bottom p, .layout-bottom a{
   font-size: 14pt;
@@ -276,16 +278,17 @@ p {
     display: none;
 }
 .col-md-4 {
-    width: calc(94%/4);
+    width: calc(94vw/4);
     display: inline-block;
     float: left;
-    margin-left: 1%;
-    margin-right: 1%;
+    margin-left: 1vw;
+    margin-right: 1vw;
 }
 .card-wrap {
     background: #FFF;
     padding: 40px;
     margin: 40px 0px;
+    min-height: 320px;
 }
 .card-title {
     margin: 20px 0;
