--- a/core/profiles/demo_umami/themes/umami/css/base.css
+++ b/core/profiles/demo_umami/themes/umami/css/base.css
@@ -300,3 +300,11 @@ footer.footer {
     font-size: 20pt;
     font-weight: bold;
 }
+.how-it-works {
+    padding: 40px 0 60px;
+}
+.how-it-works h2 {
+    text-align: center;
+    padding: 40px 0;
+    font-weight: bold;
+}
