--- a/core/profiles/demo_umami/themes/umami/css/base.css
+++ b/core/profiles/demo_umami/themes/umami/css/base.css
@@ -339,3 +339,10 @@ a.menu-main__link.is-active {
   border-bottom-color: #9acb2d !important;
   color: #9acb2d !important;
 }
+.region.region-pre-header {
+    padding: 10px 0;
+}
+.region.region-pre-header {
+    padding: 10px 0;
+    border-bottom: 2px solid #9acb2d;
+}
