--- a/core/profiles/demo_umami/themes/umami/css/base.css
+++ b/core/profiles/demo_umami/themes/umami/css/base.css
@@ -322,6 +322,16 @@ footer.footer {
 }
 .layout-tabs {
     background: #9acb2d!important;
+    margin-top: 150px;
+}
+.layout-header {
+    padding: 0;
+    background: #fff;
+    webkit-box-shadow: 0px 6px 5px 0px #ccc;
+    -moz-box-shadow: 0px 6px 5px 0px #ccc;
+    box-shadow: 0px 6px 5px 0px #ccc;
+    position: fixed;
+    width: 100%;
 }
 main.main.container {
     padding: 0 0 40px 0;
@@ -364,4 +374,7 @@ li.tab.is-active a[href="/en/user/login"] {
 }
 body{
   background: #FFF!important;
+}
+div#block-umami-branding {
+    margin: 0;
 }
