push apigee edge module

--- a/core/profiles/demo_umami/themes/umami/css/base.css
+++ b/core/profiles/demo_umami/themes/umami/css/base.css
@@ -383,3 +383,10 @@ div#block-umami-branding {
 h1,h2,h3,h4,p,a{
   font-family: Roboto,Arial,Calibri,Lucida Sans Unicode,sans-serif!important;
 }
+.table--app-list th{
+text-align: left;
+padding-bottom: 10px;
+}
+.table--app-list td{
+min-width: 200px;
+}
