--- a/core/profiles/demo_umami/themes/umami/css/base.css
+++ b/core/profiles/demo_umami/themes/umami/css/base.css
@@ -412,3 +412,14 @@ table.table--app-list a:hover {
 table.table--app-list button[type="button"] {
     color: #000;
 }
+div#edit-actions{
+    padding: 3px 0;
+}
+input#edit-submit-apigee-api-catalog {
+    padding: 10px;
+    background: #9acb2d;
+    border: 2px solid #9acb2d;
+}
+.path-apis .form-item label {
+    display: none;
+}
